igt@i915_selftest@live_gt_lrc - incomplete/dmesg-fail - live_pphwsp_runtime failed with error -75
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7997/fi-kbl-x1275/igt@i915_selftest@live_gt_lrc.html
(i915_selftest:5111) igt_kmod-WARNING: i915/intel_lrc_live_selftests: live_lrc_timestamp failed with error -22
(i915_selftest:5111) igt_kmod-WARNING: i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling power well 2
(i915_selftest:5111) igt_kmod-WARNING: i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI A/E IO power well
(i915_selftest:5111) igt_kmod-WARNING: i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI B IO power well
(i915_selftest:5111) igt_kmod-WARNING: i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI C IO power well
(i915_selftest:5111) igt_kmod-WARNING: i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI D IO power well
(i915_selftest:5111) igt_kmod-WARNING: intel_gt_set_wedged called from i915_driver_remove+0x55/0x110 [i915]
(i915_selftest:5111) igt_kmod-WARNING: intel_gt_set_wedged called from intel_gt_set_wedged_on_init+0x15/0x20 [i915]
(i915_selftest:5111) igt_kmod-WARNING: i915: probe of 0000:00:02.0 failed with error -22
(i915_selftest:5111) igt_kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file ../lib/igt_kmod.c:588:
(i915_selftest:5111) igt_kmod-CRITICAL: Failed assertion: err == 0
(i915_selftest:5111) igt_kmod-CRITICAL: kselftest "i915 igt__24__live_gt_lrc=1 live_selftests=-1 disable_display=1 st_filter=" failed: Invalid argument [22]
(i915_selftest:5111) igt_core-INFO: Stack trace:
(i915_selftest:5111) igt_core-INFO: #0 ../lib/igt_core.c:1637 __igt_fail_assert()
(i915_selftest:5111) igt_core-INFO: #1 [igt_kselftest_execute+0x2e5]
(i915_selftest:5111) igt_core-INFO: #2 ../lib/igt_kmod.c:622 igt_kselftests()
(i915_selftest:5111) igt_core-INFO: #3 /usr/include/x86_64-linux-gnu/bits/stdio2.h:64 __real_main29()
(i915_selftest:5111) igt_core-INFO: #4 ../tests/i915/i915_selftest.c:29 main()
(i915_selftest:5111) igt_core-INFO: #5 ../csu/libc-start.c:344 __libc_start_main()
(i915_selftest:5111) igt_core-INFO: #6 [_start+0x2a]